--- a/about.html
+++ b/about.html
@@ -32,4 +32,4 @@
 <body>
     <div id="navBar"></div><br><br><br>
 
-    <p>This site is run by one blahaj to help people with ADHD and problems with organisation with their study. That's basically it this is a placeholder page I'll add more later.</p>
+    <p>This site is made to help people with ADHD and problems with organisation with their study. That's basically it this is a placeholder page I'll add more later. The code to break down tasks is made using the goblin.tools api so look into that if you're interested it's really useful.</p>
