--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     
       gtag('config', 'G-8H8GFPPQ3K');
     </script>
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+    <script>
+      window.OneSignalDeferred = window.OneSignalDeferred || [];
+      OneSignalDeferred.push(async function(OneSignal) {
+        await OneSignal.init({
+          appId: "bcf0c889-58a4-44e6-87b8-8ac66fa72c44",
+          safari_web_id: "web.onesignal.auto.4bf63793-66f2-4d83-98c9-d7c9e724d029",
+          notifyButton: {
+            enable: true,
+          },
+        });
+      });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
